--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -992,7 +992,7 @@ input, select, textarea {
 		-ms-transition: background-color 0.2s ease, box-shadow 0.2s ease, color 0.2s ease;
 		transition: background-color 0.2s ease, box-shadow 0.2s ease, color 0.2s ease;
 		-webkit-tap-highlight-color: rgba(255, 255, 255, 0);
-		background-color: transparent;
+		background-color: white;
 		border-radius: 8px;
 		border: 0;
 		box-shadow: inset 0 0 0 1px #cccccc;
@@ -1010,6 +1010,7 @@ input, select, textarea {
 		text-decoration: none;
 		text-transform: uppercase;
 		white-space: nowrap;
+		z-index:1;
 	}
 
 		input[type="submit"].icon:before,
@@ -1133,6 +1134,10 @@ input, select, textarea {
 		button.active,
 		.button:hover,
 		.button.active {
+			-moz-transform: scale(1.05);
+			-webkit-transform: scale(1.05);
+			-ms-transform: scale(1.05);
+			transform: scale(1.05);
 			box-shadow: inset 0 0 0 1px #81052a;
 			color: #81052a !important;
 		}
